# tinyml

./: LICENSE  a.out  coreml.opam  dune-project  ff.ll  tinyml.opam  tt2.ll
src/: ast.ml  dune  lexer.mll  llprint.ml  main.ml  parser.mly
test/: main.ml
